syntax = "proto3";

package xBase;

import "google/protobuf/any.proto";
import "proto/error.proto";

option go_package = "./grpc/generate;xGrpcGenerate";

message BaseResponse {
  string context = 1;
  string output = 2;
  uint64 code = 3;
  string message = 4;
  optional string error_message = 5;
  optional int64 overhead = 6;
  google.protobuf.Any data = 7;
  GrpcError error = 8;
}
